--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Buy it, use it, break it, fix it,</br>
+<p>
+    Buy it, use it, break it, fix it,</br>
     Trash it, change it, mail, upgrade it,</br>
     Charge it, point it, zoom it, press it,</br>
     Snap it, work it, quick, erase it,</br>
@@ -23,7 +24,8 @@
     Name it, rate it, tune it, print it,</br>
     Scan it, send it, fax, rename it,</br>
     Touch it, bring it, pay it, watch it.</br>
-    <a href="https://en.wikipedia.org/wiki/Daft_Punk">Technologic.</a></p>
+    <a href="https://en.wikipedia.org/wiki/Daft_Punk">Technologic.</a>
+</p>
 
 </body>
 </html>
